--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - MY_GODADDY_SECRET=${MY_GODADDY_SECRET}
     volumes:
       - getssl_data:/etc/letsencrypt:rw
+      - ssmtp_data:/etc/ssmtp:ro
 #    healthcheck:
 #      test: netstat -an | grep 1880; if [ 0 != $$? ]; then exit 1; fi;
 ##      test: ["CMD", "curl", "-f", "http://localhost:1880"]
@@ -27,4 +28,6 @@ services:
 #      - "com.centurylinklabs.watchtower.enable=true"
 volumes:
   getssl_data:
+    external: true
+  ssmtp_data:
     external: true
