--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.5"
 services:
   getssl:
     build: .
+    pull_policy: build
     container_name: getssl
     restart: unless-stopped
     network_mode: host
